--- a/about.html
+++ b/about.html
@@ -116,9 +116,9 @@
               <div class="item">
                 <div class="testimony-wrap py-4">
                   <div class="text">
-                    <p class="mb-4">While there's life, there'is hope.</p>
+                    <p class="mb-4">You and I are unique brothers, And even if I end up just becoming an obstacle you need to overcome, I'll always be there for you.</p>
                     <div class="d-flex align-items-center">
-                    	<div class="user-img" style="background-image: url(images/person_1.jpg)"></div>
+                    	<div class="user-img" style="background-image: url(images/7798be70edfa36d319dd72bbb85d28bd.png)"></div>
                     	<div class="pl-3">
 		                    <p class="name">Quynh Pham</p>
 		                    <span class="position">Marketing Manager</span>
@@ -132,7 +132,7 @@
                   <div class="text">
                     <p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
                     <div class="d-flex align-items-center">
-                    	<div class="user-img" style="background-image: url(images/person_2.jpg)"></div>
+                    	<div class="user-img" style="background-image: url(images/7798be70edfa36d319dd72bbb85d28bd.png)"></div>
                     	<div class="pl-3">
 		                    <p class="name">Thuy Linh Tran</p>
 		                    <span class="position">Creative Director</span>
@@ -146,7 +146,7 @@
                   <div class="text">
                     <p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
                     <div class="d-flex align-items-center">
-                    	<div class="user-img" style="background-image: url(images/person_3.jpg)"></div>
+                    	<div class="user-img" style="background-image: url(images/7798be70edfa36d319dd72bbb85d28bd.png)"></div>
                     	<div class="pl-3">
 		                    <p class="name">Huong Ho</p>
 		                    <span class="position">Account Manager</span>
@@ -160,7 +160,7 @@
                   <div class="text">
                     <p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
                     <div class="d-flex align-items-center">
-                    	<div class="user-img" style="background-image: url(images/person_1.jpg)"></div>
+                    	<div class="user-img" style="background-image: url(images/7798be70edfa36d319dd72bbb85d28bd.png)"></div>
                     	<div class="pl-3">
 		                    <p class="name">Uyen Thu Nguyen</p>
 		                    <span class="position">Brand Manager</span>
@@ -174,7 +174,7 @@
                   <div class="text">
                     <p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
                     <div class="d-flex align-items-center">
-                    	<div class="user-img" style="background-image: url(images/person_2.jpg)"></div>
+                    	<div class="user-img" style="background-image: url(images/7798be70edfa36d319dd72bbb85d28bd.png)"></div>
                     	<div class="pl-3">
 		                    <p class="name">Phuong Dung Nguyen</p>
 		                    <span class="position">Planning Manager</span>
