--- a/about.html
+++ b/about.html
@@ -106,8 +106,8 @@
       <div class="container">
         <div class="row justify-content-center mb-5">
           <div class="col-md-7 text-center heading-section ftco-animate">
-          	<span class="subheading">Testimonial</span>
-            <h2 class="mb-4">Happy Clients</h2>
+          	<span class="subheading">We are One</span>
+            <h2 class="mb-4">Happy Team</h2>
           </div>
         </div>
         <div class="row ftco-animate">
@@ -130,9 +130,9 @@
               <div class="item">
                 <div class="testimony-wrap py-4">
                   <div class="text">
-                    <p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+                    <p class="mb-4">Instead of thingking outside the box, get rib of the box</p>
                     <div class="d-flex align-items-center">
-                    	<div class="user-img" style="background-image: url(images/7798be70edfa36d319dd72bbb85d28bd.png)"></div>
+                    	<div class="user-img" style="background-image: url(images/123036425_356046258825620_8703808908031308908_n.jpg)"></div>
                     	<div class="pl-3">
 		                    <p class="name">Thuy Linh Tran</p>
 		                    <span class="position">Creative Director</span>
@@ -158,9 +158,9 @@
               <div class="item">
                 <div class="testimony-wrap py-4">
                   <div class="text">
-                    <p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+                    <p class="mb-4">𝗧𝗵𝗲 𝘄𝗼𝗿𝘀𝘁 𝗽𝗮𝗶𝗻 𝗶𝘀 𝗴𝗲𝘁𝘁𝗶𝗻𝗴 𝗵𝘂𝗿𝘁 𝗯𝘆 𝘁𝗵𝗲 𝗽𝗲𝗿𝘀𝗼𝗻 𝘆𝗼𝘂 𝗲𝘅𝗽𝗹𝗮𝗶𝗻𝗲𝗱 𝘆𝗼𝘂𝗿 𝗽𝗮𝗶𝗻 𝘁𝗼.</p>
                     <div class="d-flex align-items-center">
-                    	<div class="user-img" style="background-image: url(images/7798be70edfa36d319dd72bbb85d28bd.png)"></div>
+                    	<div class="user-img" style="background-image: url(images/123055872_406857193655491_412524219613533782_n.jpg)"></div>
                     	<div class="pl-3">
 		                    <p class="name">Uyen Thu Nguyen</p>
 		                    <span class="position">Brand Manager</span>
