--- a/about.html
+++ b/about.html
@@ -118,7 +118,7 @@
                   <div class="text">
                     <p class="mb-4">You and I are unique brothers, And even if I end up just becoming an obstacle you need to overcome, I'll always be there for you.</p>
                     <div class="d-flex align-items-center">
-                    	<div class="user-img" style="background-image: url(images/7798be70edfa36d319dd72bbb85d28bd.png)"></div>
+                    	<div class="user-img" style="background-image: url(images/123135843_342469200186037_3877265676468173259_n.jpg)"></div>
                     	<div class="pl-3">
 		                    <p class="name">Quynh Pham</p>
 		                    <span class="position">Marketing Manager</span>
@@ -144,9 +144,9 @@
               <div class="item">
                 <div class="testimony-wrap py-4">
                   <div class="text">
-                    <p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+                    <p class="mb-4">Life is like riding a bicycle. To keep your balance you must keep moving.</p>
                     <div class="d-flex align-items-center">
-                    	<div class="user-img" style="background-image: url(images/7798be70edfa36d319dd72bbb85d28bd.png)"></div>
+                    	<div class="user-img" style="background-image: url(images/123162733_717435792454292_503971638229320137_n.jpg)"></div>
                     	<div class="pl-3">
 		                    <p class="name">Huong Ho</p>
 		                    <span class="position">Account Manager</span>
@@ -172,9 +172,9 @@
               <div class="item">
                 <div class="testimony-wrap py-4">
                   <div class="text">
-                    <p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+                    <p class="mb-4">My wallet is like an onion. When I open it, I cry</p>
                     <div class="d-flex align-items-center">
-                    	<div class="user-img" style="background-image: url(images/7798be70edfa36d319dd72bbb85d28bd.png)"></div>
+                    	<div class="user-img" style="background-image: url(images/123164908_454478278850225_8583690617450058419_n.jpg)"></div>
                     	<div class="pl-3">
 		                    <p class="name">Phuong Dung Nguyen</p>
 		                    <span class="position">Planning Manager</span>
