--- a/about.html
+++ b/about.html
@@ -116,7 +116,7 @@
               <div class="item">
                 <div class="testimony-wrap py-4">
                   <div class="text">
-                    <p class="mb-4">You and I are unique brothers, And even if I end up just becoming an obstacle you need to overcome, I'll always be there for you.</p>
+                    <p class="mb-4">“Knowledge and awareness are vague, and perhaps better-called illusions.”</p>
                     <div class="d-flex align-items-center">
                     	<div class="user-img" style="background-image: url(images/123135843_342469200186037_3877265676468173259_n.jpg)"></div>
                     	<div class="pl-3">
