--- a/connected-consumer-q2-2020.html
+++ b/connected-consumer-q2-2020.html
@@ -69,7 +69,7 @@
 <p class="mb-5">
               <img src="images/CC full report Q2 2020 - cover photo.jpg" alt="" class="img-fluid">
             </p>
-            <p>Xem full report tại đây: https://drive.google.com/file/d/1C79Jxpv8xaYAqPmm46Z5qJV6hwz4K8QT/</p>
+            <p>Xem full report tại đây: <a href="https://drive.google.com/file/d/1C79Jxpv8xaYAqPmm46Z5qJV6hwz4K8QT/">https://drive.google.com/file/d/1C79Jxpv8xaYAqPmm46Z5qJV6hwz4K8QT/</a></p>
            <div class="tag-widget post-tag-container mb-5 mt-5">
                <div class="tagcloud">
                   <a href="#" class="tag-cloud-link">MarTech</a>
